// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component snap test Render TextField with label, should matching snapshot 1`] = `
<div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class="ant-form-item-no-colon"
        title="Username"
      >
        Username
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            class="ant-input"
            name="username"
            placeholder="username"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-form-item-explain"
      >
        <div
          role="alert"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField component snap test Render TextField, should matching snapshot 1`] = `
<div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            class="ant-input"
            name="test"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-form-item-explain"
      >
        <div
          role="alert"
        />
      </div>
    </div>
  </div>
</div>
`;
